# BioSeq

bio_database/: Makefile  biodb.c  biodb.h  mein_database.db
bio_database/env_home_dir/: __db.001  __db.002  __db.003  mein_database.db
bio_database/prokeryotic_proteins/: __db.001  __db.002  __db.003
data/: NC_004347.faa  NC_010623.faa
intro_bioinformatics/: orf.py
intro_bioinformatics/chapter4/: pdp.py
intro_bioinformatics/chapter5/: reverse_potential.py  reverse_potential.py~
intro_bioinformatics/chapter6/: TAGS  alignment.py~  carrol_dist.py  carrol_dist.py~  elevator.py  elevator.py~  global_gap.res  seq2.txt~  tester.txt
intro_bioinformatics/chapter7/: se_alignment.py  se_alignment.py~
intro_bioinformatics/chapter8/: superseq.py  superseq.py~
intro_bioinformatics/chapter9/: pattern_match.py  pattern_match.py~
multz_alignment/: README.txt  alignment.txt  all44.txt  chart.xls  cse427hw3.vcproj  description.txt  eval.cpp  eval.h  main.cpp  parser.cpp  parser.h  pre_parser.cpp  pre_parser44.cpp
mummergpu-2.0/src/: TAGS  mummergpu.h
mummergpu-workloads/CBRIGG/: README
mummergpu-workloads/HSILL/: README
mummergpu-workloads/LMONO/: README  lmono_ref.fna
mummergpu-workloads/SSUIS/: README
smith_waterman/: .gitignore  CMakeLists.txt  Makefile  NC_004349.faa  NC_010622.faa  NC_010625.faa  NC_010627.faa  README.txt  TAGS  cmake_install.cmake  database.cpp  database.h  extra_alignment.cu  extra_alignment_kernel.cu  extra_credit.txt  extra_pruning_2_result.txt  hw2.cpp  match.txt  sw_align_cpu.cpp
(+6 files in other folders)
